gitops/infrastructure/namespace-observability-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability-system
  labels:
    kubernetes.io/metadata.name: observability-system
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: v1.35
