gitops/infrastructure/namespace-techx-tf3.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techx-tf3
  labels:
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
