gitops/infrastructure/network-policy-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-network-policy
  namespace: techx-tf3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: kafka
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: checkout
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: accounting
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: fraud-detection
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: opentelemetry-collector
              component: agent-collector
      ports:
        - protocol: TCP
          port: 9092
