gitops/infrastructure/network-policy-loadgen-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loadgen-deny-ingress
  namespace: techx-tf3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: load-generator
  policyTypes:
    - Ingress
