gitops/infrastructure/network-policy-opensearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opensearch-access
  namespace: techx-tf3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: opensearch
  policyTypes:
  - Ingress
  ingress:
  # Chỉ cho phép fluent-bit, grafana, và jaeger gọi vào OpenSearch
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: fluent-bit
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: grafana
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: jaeger
    ports:
    - protocol: TCP
      port: 9200
