gitops/infrastructure/network-policy-valkey.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: valkey-cart-network-policy
  namespace: techx-tf3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: valkey-cart
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: cart
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: opentelemetry-collector
              component: agent-collector
      ports:
        - protocol: TCP
          port: 6379
